--- a/style.css
+++ b/style.css
@@ -517,6 +517,7 @@ h2{
 .page2{
     height: fit-content;
     overflow: hidden;
+    padding-bottom: 3vh;
 }
 .real_project_cont{
     padding: 20px 5vw;
@@ -570,4 +571,88 @@ h2{
     .page2{
         margin-top: 20vh;
     }
+}
+/* page 3 */
+.page3{
+    padding-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #013342;
+}
+
+.about{
+    font-size: 40px;
+    font-weight: 500;
+    color: #EEF2F4;
+}
+.about_content_container{
+    width: 80vw;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+.my_img{
+    border: 1px solid #EEF2F4;
+    border-radius: 5px;
+    /* box-shadow: 2px 0px 10px white; */
+    width: 20vw;
+    height: auto;
+    margin-right: 15px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+.about_content{
+    width: 400px;
+    color: #EEF2F4;
+    font-size: 1.4rem;
+    margin-top: 10px;
+    margin-right: 5px;
+}
+#initials{
+    color: #EEF2F4;
+    font-size: 1.7rem;
+    font-weight: 500;
+}
+.jatt{
+    color: rgb(238, 242, 150);
+}
+
+@media (max-width: 750px) {
+
+.about_content_container{
+    width: 80vw;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.my_img{
+    width: 50vw;
+    border-width: 1px;
+}
+.about_content{
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    width: 90vw;
+    line-height: 35px;
+}
+#initials{
+    align-self: center;
+}
+.per{
+    align-self: center;
+    font-size: 1.3rem;
+    font-weight: 300;
+}
+
+}
+
+
+/* page3 */
+
+.page4{
+    height: 100vh;
+    background-color: #EEF2F4;
 }
