--- a/style.css
+++ b/style.css
@@ -96,11 +96,11 @@ nav{
 #slider{
     background-color: rgba(0, 0, 0, 0.859);
     height: 100vh;
-    width: 40vw;
+    width: 60vw;
     position: fixed;
     top:0;
     border-left: 2px solid black ;
-    right: -42vw;
+    right: -60vw;
     z-index: 10001;
     transition-duration: 300ms;
 
@@ -132,7 +132,7 @@ nav{
 /* page 1 */
 .page1{
     /* height: calc(94vh - 30px); */
-    height: calc(80vh - 30px);
+    height: fit-content;
     /* background-color: aqua; */
     display: flex;
 
@@ -283,7 +283,7 @@ h2{
         display: inline-block;
         position: fixed;
         top:25px;
-        right: 100px;
+        right:20vw;
         z-index: 10002;
     }
     .lines_container.active :nth-child(1){
@@ -310,7 +310,7 @@ h2{
         flex-wrap: wrap;
     }
     .left button{
-        margin-top: 30px;
+        margin-top: 10px;
     }
 
     #main{
@@ -318,9 +318,10 @@ h2{
 
     }
     .left{
+        padding-top: 10vh;
         padding-left: 0;
         width: 100vw;
-        line-height: 60px;
+        line-height: 45px;
         height: 65vh;
     }
 
@@ -371,29 +372,23 @@ h2{
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size:45px;
     }
-}
-@media (max-width: 1180px) { 
     h1{
-        font-size: 2.7rem;
+        font-size: 2rem;
         font-weight: 400;
         color: rgba(0, 0, 0, 0.813);
     }
     h1 span{
-        font-size: 4.5rem;
+        font-size: 3rem;
         color: #035D78;
         font-weight: 700;
     
     } 
-    
-}
-@media (max-width: 920px) {
-
     h2{
-        font-size: 1.24rem;
-        font-weight: 400;
+        font-size: 1rem;
+        font-weight: 300;
     }
-
 }
+
 @keyframes move {
     from{
         top: 18vh;
@@ -521,25 +516,25 @@ h2{
     padding-bottom: 3vh;
 }
 .real_project_cont{
-    padding: 20px 5vw;
+    padding: 0px 0vw;
     height: fit-content;
-    width: 90vw;
+    width: 100vw;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
 .pro_photo_container{
-    margin-top: 25px;
-    width: 100%;
+
+    margin-bottom: 30px;
+    width: fit-content;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
 .info_pro_img{
-    width: 400px;
-
+    width: 90vw;
 }
 
 .pro_photos{
@@ -547,7 +542,7 @@ h2{
     border: 2px solid #013342;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 10px;
-    width: 400px;
+    width: fit-content;
     /* height: fit-content; */
     display: flex;
     flex-direction: column;
@@ -568,9 +563,6 @@ h2{
             justify-content: space-between;
             align-items: center;
             min-height: 550px;
-    }
-    .page2{
-        margin-top: calc(20vh + 30px);
     }
 }
 /* page 3 */
@@ -616,7 +608,7 @@ h2{
 }
 #initials{
     color: #EEF2F4;
-    font-size: 1.7rem;
+    font-size: 7vw;
     font-weight: 500;
 }
 .jatt{
@@ -637,7 +629,7 @@ h2{
     border-width: 1px;
 }
 .about_content{
-    font-size: 1.2rem;
+    font-size: 4vw;
     display: flex;
     flex-direction: column;
     width: 90vw;
@@ -648,7 +640,7 @@ h2{
 }
 .per{
     align-self: center;
-    font-size: 1.3rem;
+    font-size: 5vw;
     font-weight: 300;
 }
 
@@ -783,7 +775,8 @@ h2{
 }
 #footer_container{
     background-color: black;
-    height: 250px;
+    height: fit-content;
+    padding-bottom: 10px;
 }
 .footer_box1{
     display: flex;
@@ -791,6 +784,7 @@ h2{
     width: 100vw;
 }
 .footer_box2{
+    line-height: 25px;
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -803,26 +797,23 @@ h2{
 }
 .line{
     align-self: center;
-    width: 20vw;
+    position: relative;
+    top: -15px;
+    width: 30vw;
     height: 1px;
-    background-color: #EEF2F4;
+    background-color: #eef2f485;
 }
 .portfolio{
-    font-size: 2rem;
+    font-size: 1.2rem;
     align-self: center;
     margin-top: 15px;
-    color: #EEF2F4;
+    color: #eef2f4c1;
 }
 .this{
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 300;
-    color: #EEF2F4;
+    color: rgba(255, 255, 255, 0.632);
     align-self: center;
-}
-@media (max-width:750px) {
-    #maut{
-        display: none;
-    }
 }
 .socials_card a{
     text-decoration: none;
@@ -833,3 +824,17 @@ h2{
     color: rgba(0, 0, 0, 0.625);
     transition-duration: 200ms;
 }
+@media (max-width:750px) {
+    #maut{
+        display: none;
+    }
+    .socials_card a{
+        transition:none;
+
+    }
+    .socials_card a:hover{
+        color: rgb(0, 0, 0);
+        transition: none;
+    }
+}
+
