--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ h2 {
 }
 
 .pro_photo_container {
-  margin-top: 25px;
+  margin-bottom: 25px;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
