--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ nav {
 }
 
 #slider {
+  display: none;
   background-color: rgba(0, 0, 0, 0.859);
   height: 100vh;
   width: 50vw;
@@ -288,6 +289,7 @@ h2 {
     right: 10vw;
     transition-duration: 300ms;
   }
+
   .page1 {
     padding-top: -10vh;
     flex-wrap: wrap;
