--- a/style.css
+++ b/style.css
@@ -688,6 +688,10 @@ h2 {
 .left_right_container {
   display: flex;
 }
+.jatt{
+  display: flex;
+  justify-content: center;
+}
 .left4 {
   padding: 0px 0;
   width: 42vw;
@@ -927,7 +931,6 @@ h2 {
     padding: 10px 5vw;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: absolute;
-    /* left: 100px; */
     top: -40px;
     text-align: center;
     background-color: #eef2f4;
