--- a/style.css
+++ b/style.css
@@ -592,6 +592,7 @@ h2 {
 }
 .about_content_container {
   padding-top: 30px;
+  padding-bottom: 5vh;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -603,7 +604,7 @@ h2 {
   /* box-shadow: 2px 0px 10px white; */
   /* width: 20vw; */
 
-  height: 36vw;
+  height: 40vw;
   margin-right: 15px;
   margin-top: 10px;
   margin-left: 10px;
