--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ h2 {
 .page3 {
   overflow: hidden;
   position: relative;
-  padding-bottom: 100px;
+  padding-bottom: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -599,10 +599,11 @@ h2 {
 .my_img {
   border: 1px solid #eef2f4;
   border-radius: 5px;
+
   /* box-shadow: 2px 0px 10px white; */
   /* width: 20vw; */
 
-  height: 40vw;
+  height: max(40vw, 400px);
   margin-right: max(10vw, 10px);
   margin-top: 10px;
   margin-left: 10px;
@@ -641,6 +642,7 @@ h2 {
   .my_img {
     width: 50vw;
     height: auto;
+    margin-right: 0;
     border-width: 1px;
   }
   .about_content {
@@ -960,27 +962,25 @@ h2 {
     }
   }
 }
-.side_img1 {
-  display: none;
-  position: absolute;
-  width: 20vw;
-  opacity: 1;
-  left: 0vw;
-  top: 200px;
-}
+
 .my_img {
   position: relative;
 }
-.about_content{
+.about_content {
   position: relative;
 }
-.about_content::after {
-  content: "";
+
+.side_img1 {
   position: absolute;
-  left: -20px;
-  width: 200px;
-  height: 300px;
-  top: 200px;
-  background-size: cover;
-  background-image: url("./assets/arrow.png");
+  left: 37vw;
+  width: max(25vw, 290px);
+  bottom: min(-14vh, 110px);
+  opacity: 1;
+  rotate: -90deg;
+  z-index: 10;
+}
+@media (max-width: 750px) {
+  .side_img1 {
+    display: none;
+  }
 }
